Drivers: deleting all keyframes leaves an uneditable f-curve #80727

Closed
opened 2020-09-12 14:14:48 +02:00 by RedMser · 4 comments
Contributor

System Information
Operating system: Linux-4.15.0-45-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, hash: 29af082e4a
Also broken in 2.79b, so maybe it never worked before?

Short description of error
After creating a driver and deleting all of its keyframes in the driver editor, you are no longer able to add new keyframes to the driver, leaving only the dashed "ghost" f-curve.

Exact steps for others to reproduce the error

  • Download this reproduction .blend file driverBreakCurveSetup.blend
    • Manual setup: Add valid driver to a property
    • Open driver editor
  • Remove all keyframes of the driver's f-curve
  • The f-curve should appear as a diagonal, dotted line and you are no longer able to insert new keyframes to it image.png image.png
  • To fix, you have to undo. Or you delete and re-create the driver
**System Information** Operating system: Linux-4.15.0-45-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, hash: `29af082e4a` Also broken in 2.79b, so maybe it never worked before? **Short description of error** After creating a driver and deleting all of its keyframes in the driver editor, you are no longer able to add new keyframes to the driver, leaving only the dashed "ghost" f-curve. **Exact steps for others to reproduce the error** - Download this reproduction .blend file [driverBreakCurveSetup.blend](https://archive.blender.org/developer/F8868366/driverBreakCurveSetup.blend) - Manual setup: Add valid driver to a property - Open driver editor - Remove all keyframes of the driver's f-curve - The f-curve should appear as a diagonal, dotted line and you are no longer able to insert new keyframes to it ![image.png](https://archive.blender.org/developer/F8868384/image.png) ![image.png](https://archive.blender.org/developer/F8868386/image.png) - To fix, you have to undo. Or you delete and re-create the driver
Author
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Bastien Montagne self-assigned this 2020-09-24 13:46:42 +02:00

This issue was referenced by 7ba30d35d1

This issue was referenced by 7ba30d35d15a5f6c88167c559ce3acc12c63e4a4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80727
No description provided.