Fix T80727: Drivers: deleting all keyframes leaves an uneditable f-curve.

A NULL bezier pointer does not mean that the fcurve is not editable, it
only is if it actually has some baked sample points too.